add ex3 And update ex2

--- a/Ex2.html
+++ b/Ex2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>15 số chia hết cho 3</title>
+    <title>15 số đầu tiên chia hết cho 3</title>
 </head>
 <body>
 <script>
